fix spacing of links in header

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,7 +4,8 @@
   justify-content: space-around;
   min-height: 79px;
   color: #358AC8;
-  margin-left: 5%;
+  padding-left: 5%;
+  padding-right: 5%;
   border-bottom: 1px solid #EAEAEA;
 }
 
@@ -29,4 +30,5 @@
 
 #header > a.links{
   font-weight: 600;
+  min-width: 54px;
 }
